# rust-gpu-minimal-example

./: Cargo.toml  README.md
shaders/: Cargo.toml
shaders/src/: lib.rs
src/: compute.rs  graphics.rs  main.rs
