[package]
name = "rust-gpu-minimal-example"
version = "0.1.0"
edition = "2021"
authors = ["Embark <opensource@embark-studios.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
futures = { version = "0.3", default-features = false, features = [
    "std",
    "executor",
] }
# Vulkan SDK or MoltenVK needs to be installed for `vulkan-portability` to work on macOS
wgpu = { git = "https://github.com/gfx-rs/wgpu", rev = "0ac9ce002656565ccd05b889f5856f4e2c38fa73", features = [
    "spirv",
    "vulkan-portability",
] }
winit = { version = "0.26" }
bytemuck = { version = "=1.7.3", features = ["derive"] }


[build-dependencies]
spirv-builder = { version = "0.4.0-alpha.12" }

[workspace]
members = ["shaders"]

[patch.crates-io]
spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu" }
spirv-std = { git = "https://github.com/EmbarkStudios/rust-gpu" }
